some small notebook changes, fixed call to software convolution in tiny-yolo-image-loop

--- a/notebooks/tiny-yolo-image-loop.ipynb
+++ b/notebooks/tiny-yolo-image-loop.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
     "        if len(conv7_out.shape)<4:\n",
     "            conv7_out = conv7_out[np.newaxis, :, :, :] \n",
     "\n",
-    "        conv8_output = utils.conv_layer(conv7_out,conv8_weights_correct,b=,stride=1)  \n",
+    "        conv8_output = utils.conv_layer(conv7_out,conv8_weights_correct,b=conv8_bias_broadcast,stride=1)  \n",
     "        conv8_out = conv8_output.ctypes.data_as(ctypes.POINTER(ctypes.c_float))\n",
     "\n",
     "        #Draw detection boxes\n",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,13 +195,6 @@
     "xlnk = Xlnk();\n",
     "xlnk.xlnk_reset()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
