Update Machine Learning on PYNQ.ipynb

--- a/notebooks/Machine Learning on PYNQ.ipynb
+++ b/notebooks/Machine Learning on PYNQ.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "* [Object Detection - from image](/notebooks/qnn/tiny-yolo-image.ipynb): shows object detection in a image (e.g., downloaded from the web, your phone etc), being able to identify objects in a scene and drawing bounding boxes around them. The objects can be one of the 20 available in the  <a href=\"http://host.robots.ox.ac.uk/pascal/VOC/\" target=\"_blank\"> PASCAL VOC </a> dataset\n",
     "\n",
-    "* [Object Detection - from image in a loop](/notebooks/qnn/tiny-yolo-image-loop.ipynb): shows object detection in a image and draws bounding boxes around indentified objects (20 available classes from <a href=\"http://host.robots.ox.ac.uk/pascal/VOC/\" target=\"_blank\"> PASCAL VOC </a> dataset) in a loop.\n",
+    "* [Object Detection - from image in a loop](/notebooks/qnn/tiny-yolo-image-loop.ipynb): shows object detection in a image and draws bounding boxes around identified objects (20 available classes from <a href=\"http://host.robots.ox.ac.uk/pascal/VOC/\" target=\"_blank\"> PASCAL VOC </a> dataset) in a loop.\n",
     "\n",
     "\n",
     "## GitHub\n",
