--- a/notebooks/tiny-yolo-image-loop.ipynb
+++ b/notebooks/tiny-yolo-image-loop.ipynb
@@ -56,13 +56,13 @@
     "classifier.init_accelerator()\n",
     "net = classifier.load_network(json_layer=\"/usr/local/lib/python3.6/dist-packages/qnn/params/tinier-yolo-layers.json\")\n",
     "\n",
-    "conv0_weights = np.load('/usr/local/lib/python3.6/dist-packages/qnn/params/tinier-yolo-conv0-W.npy', encoding=\"latin1\")\n",
+    "conv0_weights = np.load('/usr/local/lib/python3.6/dist-packages/qnn/params/tinier-yolo-conv0-W.npy', encoding=\"latin1\", allow_pickle=True)\n",
     "conv0_weights_correct = np.transpose(conv0_weights, axes=(3, 2, 1, 0))\n",
-    "conv8_weights = np.load('/usr/local/lib/python3.6/dist-packages/qnn/params/tinier-yolo-conv8-W.npy', encoding=\"latin1\")\n",
+    "conv8_weights = np.load('/usr/local/lib/python3.6/dist-packages/qnn/params/tinier-yolo-conv8-W.npy', encoding=\"latin1\", allow_pickle=True)\n",
     "conv8_weights_correct = np.transpose(conv8_weights, axes=(3, 2, 1, 0))\n",
-    "conv0_bias = np.load('/usr/local/lib/python3.6/dist-packages/qnn/params/tinier-yolo-conv0-bias.npy', encoding=\"latin1\")\n",
+    "conv0_bias = np.load('/usr/local/lib/python3.6/dist-packages/qnn/params/tinier-yolo-conv0-bias.npy', encoding=\"latin1\", allow_pickle=True)\n",
     "conv0_bias_broadcast = np.broadcast_to(conv0_bias[:,np.newaxis], (net['conv1']['input'][0],net['conv1']['input'][1]*net['conv1']['input'][1]))\n",
-    "conv8_bias = np.load('/usr/local/lib/python3.6/dist-packages/qnn/params/tinier-yolo-conv8-bias.npy', encoding=\"latin1\")\n",
+    "conv8_bias = np.load('/usr/local/lib/python3.6/dist-packages/qnn/params/tinier-yolo-conv8-bias.npy', encoding=\"latin1\", allow_pickle=True)\n",
     "conv8_bias_broadcast = np.broadcast_to(conv8_bias[:,np.newaxis], (125,13*13))\n",
     "\n",
     "file_name_cfg = c_char_p(\"/usr/local/lib/python3.6/dist-packages/qnn/params/tinier-yolo-bwn-3bit-relu-nomaxpool.cfg\".encode())\n",
