--- a/notebooks/dorefanet-imagenet-samples.ipynb
+++ b/notebooks/dorefanet-imagenet-samples.ipynb
@@ -72,8 +72,8 @@
     "classifier.init_accelerator()\n",
     "net = classifier.load_network(json_layer=\"/usr/local/lib/python3.6/dist-packages/qnn/params/dorefanet-layers.json\")\n",
     "\n",
-    "conv0_weights = np.load('/usr/local/lib/python3.6/dist-packages/qnn/params/dorefanet-conv0.npy', encoding=\"latin1\").item()\n",
-    "fc_weights = np.load('/usr/local/lib/python3.6/dist-packages/qnn/params/dorefanet-fc-normalized.npy', encoding='latin1').item()"
+    "conv0_weights = np.load('/usr/local/lib/python3.6/dist-packages/qnn/params/dorefanet-conv0.npy', encoding=\"latin1\", allow_pickle=True).item()\n",
+    "fc_weights = np.load('/usr/local/lib/python3.6/dist-packages/qnn/params/dorefanet-fc-normalized.npy', encoding='latin1', allow_pickle=True).item()"
    ]
   },
   {
